--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "@atproto/api": "^1.0.0",
-    "axios": "^0.21.1",
+    "@atproto/api": "latest",
+    "axios": "^1.7.9",
     "dotenv": "^8.2.0"
   }
 }
